--- a/src/style.css
+++ b/src/style.css
@@ -40,5 +40,11 @@ footer{
 #content{
 	flex: 1;
 	padding: 10px 10px;
+	display: flex;
+	flex-direction: column;
 }
 
+.card{
+	padding: 1rem;
+	border: 1px solid #cccccc;
+}
