--- a/src/style.css
+++ b/src/style.css
@@ -42,9 +42,18 @@ footer{
 	padding: 10px 10px;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 }
 
 .card{
 	padding: 1rem;
 	border: 1px solid #cccccc;
+	display: flex;
+	width: max-content;
+	gap: 2rem;
+	align-items: center;
+}
+
+img{
+	max-width: 30vw;
 }
