--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,8 @@ footer{
 	flex-direction: column;
 	align-items: center;
 	gap: 2rem;
+	align-self: center;
+	width: clamp(360px, 75vw, 1280px);
 }
 
 .mainCard{
@@ -86,4 +88,22 @@ img{
 
 .shadowed{
 	box-shadow: 0px 7px 5px -2px rgba(0,0,0,0.65);
+}
+
+.flexColumn{
+	flex-direction: column;
+}
+
+.menuSection{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 0.5rem;
+}
+
+.menuRow{
+	display: flex;
+	justify-content: space-between;
+	gap: 8rem;
+	width: 100%;
 }
